# liblucene++.search build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_search_dir = meson.current_source_dir()


liblucene_src += files(
    join_paths(liblucene_search_dir, 'BooleanClause.cpp'),
    join_paths(liblucene_search_dir, 'BooleanQuery.cpp'),
    join_paths(liblucene_search_dir, 'BooleanScorer2.cpp'),
    join_paths(liblucene_search_dir, 'BooleanScorer.cpp'),
    join_paths(liblucene_search_dir, 'CachingSpanFilter.cpp'),
    join_paths(liblucene_search_dir, 'CachingWrapperFilter.cpp'),
    join_paths(liblucene_search_dir, 'Collector.cpp'),
    join_paths(liblucene_search_dir, 'ComplexExplanation.cpp'),
    join_paths(liblucene_search_dir, 'ConjunctionScorer.cpp'),
    join_paths(liblucene_search_dir, 'ConstantScoreQuery.cpp'),
    join_paths(liblucene_search_dir, 'DefaultSimilarity.cpp'),
    join_paths(liblucene_search_dir, 'DisjunctionMaxQuery.cpp'),
    join_paths(liblucene_search_dir, 'DisjunctionMaxScorer.cpp'),
    join_paths(liblucene_search_dir, 'DisjunctionSumScorer.cpp'),
    join_paths(liblucene_search_dir, 'DocIdSet.cpp'),
    join_paths(liblucene_search_dir, 'DocIdSetIterator.cpp'),
    join_paths(liblucene_search_dir, 'ExactPhraseScorer.cpp'),
    join_paths(liblucene_search_dir, 'Explanation.cpp'),
    join_paths(liblucene_search_dir, 'FieldCache.cpp'),
    join_paths(liblucene_search_dir, 'FieldCacheImpl.cpp'),
    join_paths(liblucene_search_dir, 'FieldCacheRangeFilter.cpp'),
    join_paths(liblucene_search_dir, 'FieldCacheTermsFilter.cpp'),
    join_paths(liblucene_search_dir, 'FieldComparator.cpp'),
    join_paths(liblucene_search_dir, 'FieldComparatorSource.cpp'),
    join_paths(liblucene_search_dir, 'FieldDoc.cpp'),
    join_paths(liblucene_search_dir, 'FieldDocSortedHitQueue.cpp'),
    join_paths(liblucene_search_dir, 'FieldValueHitQueue.cpp'),
    join_paths(liblucene_search_dir, 'Filter.cpp'),
    join_paths(liblucene_search_dir, 'FilteredDocIdSet.cpp'),
    join_paths(liblucene_search_dir, 'FilteredDocIdSetIterator.cpp'),
    join_paths(liblucene_search_dir, 'FilteredQuery.cpp'),
    join_paths(liblucene_search_dir, 'FilteredTermEnum.cpp'),
    join_paths(liblucene_search_dir, 'FilterManager.cpp'),
    join_paths(liblucene_search_dir, 'FuzzyQuery.cpp'),
    join_paths(liblucene_search_dir, 'FuzzyTermEnum.cpp'),
    join_paths(liblucene_search_dir, 'HitQueueBase.cpp'),
    join_paths(liblucene_search_dir, 'HitQueue.cpp'),
    join_paths(liblucene_search_dir, 'IndexSearcher.cpp'),
    join_paths(liblucene_search_dir, 'MatchAllDocsQuery.cpp'),
    join_paths(liblucene_search_dir, 'MultiPhraseQuery.cpp'),
    join_paths(liblucene_search_dir, 'MultiSearcher.cpp'),
    join_paths(liblucene_search_dir, 'MultiTermQuery.cpp'),
    join_paths(liblucene_search_dir, 'MultiTermQueryWrapperFilter.cpp'),
    join_paths(liblucene_search_dir, 'NumericRangeFilter.cpp'),
    join_paths(liblucene_search_dir, 'NumericRangeQuery.cpp'),
    join_paths(liblucene_search_dir, 'ParallelMultiSearcher.cpp'),
    join_paths(liblucene_search_dir, 'PhrasePositions.cpp'),
    join_paths(liblucene_search_dir, 'PhraseQuery.cpp'),
    join_paths(liblucene_search_dir, 'PhraseQueue.cpp'),
    join_paths(liblucene_search_dir, 'PhraseScorer.cpp'),
    join_paths(liblucene_search_dir, 'PositiveScoresOnlyCollector.cpp'),
    join_paths(liblucene_search_dir, 'PrefixFilter.cpp'),
    join_paths(liblucene_search_dir, 'PrefixQuery.cpp'),
    join_paths(liblucene_search_dir, 'PrefixTermEnum.cpp'),
    join_paths(liblucene_search_dir, 'Query.cpp'),
    join_paths(liblucene_search_dir, 'QueryTermVector.cpp'),
    join_paths(liblucene_search_dir, 'QueryWrapperFilter.cpp'),
    join_paths(liblucene_search_dir, 'ReqExclScorer.cpp'),
    join_paths(liblucene_search_dir, 'ReqOptSumScorer.cpp'),
    join_paths(liblucene_search_dir, 'ScoreCachingWrappingScorer.cpp'),
    join_paths(liblucene_search_dir, 'ScoreDoc.cpp'),
    join_paths(liblucene_search_dir, 'Scorer.cpp'),
    join_paths(liblucene_search_dir, 'Searchable.cpp'),
    join_paths(liblucene_search_dir, 'Searcher.cpp'),
    join_paths(liblucene_search_dir, 'Similarity.cpp'),
    join_paths(liblucene_search_dir, 'SimilarityDelegator.cpp'),
    join_paths(liblucene_search_dir, 'SingleTermEnum.cpp'),
    join_paths(liblucene_search_dir, 'SloppyPhraseScorer.cpp'),
    join_paths(liblucene_search_dir, 'Sort.cpp'),
    join_paths(liblucene_search_dir, 'SortField.cpp'),
    join_paths(liblucene_search_dir, 'SpanFilter.cpp'),
    join_paths(liblucene_search_dir, 'SpanFilterResult.cpp'),
    join_paths(liblucene_search_dir, 'SpanQueryFilter.cpp'),
    join_paths(liblucene_search_dir, 'TermQuery.cpp'),
    join_paths(liblucene_search_dir, 'TermRangeFilter.cpp'),
    join_paths(liblucene_search_dir, 'TermRangeQuery.cpp'),
    join_paths(liblucene_search_dir, 'TermRangeTermEnum.cpp'),
    join_paths(liblucene_search_dir, 'TermScorer.cpp'),
    join_paths(liblucene_search_dir, 'TimeLimitingCollector.cpp'),
    join_paths(liblucene_search_dir, 'TopDocsCollector.cpp'),
    join_paths(liblucene_search_dir, 'TopDocs.cpp'),
    join_paths(liblucene_search_dir, 'TopFieldCollector.cpp'),
    join_paths(liblucene_search_dir, 'TopFieldDocs.cpp'),
    join_paths(liblucene_search_dir, 'TopScoreDocCollector.cpp'),
    join_paths(liblucene_search_dir, 'Weight.cpp'),
    join_paths(liblucene_search_dir, 'WildcardQuery.cpp'),
    join_paths(liblucene_search_dir, 'WildcardTermEnum.cpp'))


liblucene_search_dirs = [
    'function',
    'payloads',
    'spans']


foreach dir : liblucene_search_dirs
    subdir(dir)
endforeach
