# liblucene.analysis.standard build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_analysis_standard_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_analysis_standard_dir, 'StandardAnalyzer.cpp'),
    join_paths(liblucene_analysis_standard_dir, 'StandardFilter.cpp'),
    join_paths(liblucene_analysis_standard_dir, 'StandardTokenizer.cpp'),
    join_paths(liblucene_analysis_standard_dir, 'StandardTokenizerImpl.cpp'))
