# liblucene.analysis.tokenattributes build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_analysis_tokenattributes_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_analysis_tokenattributes_dir, 'FlagsAttribute.cpp'),
    join_paths(liblucene_analysis_tokenattributes_dir, 'OffsetAttribute.cpp'),
    join_paths(liblucene_analysis_tokenattributes_dir, 'PayloadAttribute.cpp'),
    join_paths(liblucene_analysis_tokenattributes_dir, 'PositionIncrementAttribute.cpp'),
    join_paths(liblucene_analysis_tokenattributes_dir, 'TermAttribute.cpp'),
    join_paths(liblucene_analysis_tokenattributes_dir, 'TypeAttribute.cpp'))
