# liblucene.search.function build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_search_function_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_search_function_dir, 'ByteFieldSource.cpp'),
    join_paths(liblucene_search_function_dir, 'CustomScoreProvider.cpp'),
    join_paths(liblucene_search_function_dir, 'CustomScoreQuery.cpp'),
    join_paths(liblucene_search_function_dir, 'DocValues.cpp'),
    join_paths(liblucene_search_function_dir, 'DoubleFieldSource.cpp'),
    join_paths(liblucene_search_function_dir, 'FieldCacheSource.cpp'),
    join_paths(liblucene_search_function_dir, 'FieldScoreQuery.cpp'),
    join_paths(liblucene_search_function_dir, 'IntFieldSource.cpp'),
    join_paths(liblucene_search_function_dir, 'OrdFieldSource.cpp'),
    join_paths(liblucene_search_function_dir, 'ReverseOrdFieldSource.cpp'),
    join_paths(liblucene_search_function_dir, 'ValueSource.cpp'),
    join_paths(liblucene_search_function_dir, 'ValueSourceQuery.cpp'))
