# liblucene.search.payloads build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_search_payloads_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_search_payloads_dir, 'AveragePayloadFunction.cpp'),
    join_paths(liblucene_search_payloads_dir, 'MaxPayloadFunction.cpp'),
    join_paths(liblucene_search_payloads_dir, 'MinPayloadFunction.cpp'),
    join_paths(liblucene_search_payloads_dir, 'PayloadFunction.cpp'),
    join_paths(liblucene_search_payloads_dir, 'PayloadNearQuery.cpp'),
    join_paths(liblucene_search_payloads_dir, 'PayloadSpanUtil.cpp'),
    join_paths(liblucene_search_payloads_dir, 'PayloadTermQuery.cpp'))
