# liblucene.search.spans build file
#============================================================================

liblucene_inc += include_directories('.')
liblucene_search_spans_dir = meson.current_source_dir()

liblucene_src += files(
    join_paths(liblucene_search_spans_dir, 'FieldMaskingSpanQuery.cpp'),
    join_paths(liblucene_search_spans_dir, 'NearSpansOrdered.cpp'),
    join_paths(liblucene_search_spans_dir, 'NearSpansUnordered.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanFirstQuery.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanNearQuery.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanNotQuery.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanOrQuery.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanQuery.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanScorer.cpp'),
    join_paths(liblucene_search_spans_dir, 'Spans.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanTermQuery.cpp'),
    join_paths(liblucene_search_spans_dir, 'SpanWeight.cpp'),
    join_paths(liblucene_search_spans_dir, 'TermSpans.cpp'))
